# data-analysis

./: README.md  pyproject.toml
1th/: 18101244_02_1.ipynb
