[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["MS <alstjq1012@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pearsonr = "^0.1.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
scipy = "^1.10.1"
ipykernel = "^6.21.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
